Update Post On Front End And Dark Mode Fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -131,12 +131,15 @@ code {
 
 @media(max-width: 768px){
   .header .menu{
-    position: fixed;
+    position: absolute;
     width: 100%;
     left:0;
+    top: calc(100vh - 50px);
     bottom: 0;
+    height: 50px;
     box-shadow: 0 0 10px #ddd;
     z-index: 2;
+    background: #f8f9fa;
   }
   .header .menu .navbar-nav {
     display: flex;
