--- a/client/src/styles/status_modal.css
+++ b/client/src/styles/status_modal.css
@@ -110,6 +110,7 @@
     object-fit: contain;
     width: 100%;
     height: 100%;
+    max-height: 100px;
 }
 
 .status_body .show_images #file_img span {
